--- a/now.json
+++ b/now.json
@@ -1,3 +1,9 @@
 {
-  "name": "Sandbox"
+  "name": "Sandbox",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build"
+    }
+  ]
 }
