--- a/now.json
+++ b/now.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@now/static-build"
+      "use": "@now/static-build",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ]
 }
