--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "now-build": "ng run ng-universal:udk:production",
+    "now-start": "node $npm_package_main"
   },
   "private": true,
   "dependencies": {
